<resources>
    <string name="app_name">House Booking App</string>
    <string name="explore_houses_that_nfit_your_lisfestyle">Explore Houses That\nFit Your Lisfestyle</string>
    <string name="find_your_dream_home_one_key_at_a_time_nyour_trusted_partner_in_every_move">Find Your Dream Home, One Key at a Time.\nYour Trusted Partner in Every Move</string>
    <string name="get_start">Get Start</string>
    <string name="GET_START" />
    <string name="hi_lakshan">Hi, Lakshan</string>
    <string name="house">House</string>
    <string name="_4_5">4.5</string>
    <string name="_395_00">$395.00</string>
    <string name="facilities">Facilities</string>
    <string name="_4_beds">4 Beds</string>
    <string name="find_the_perfect_nstay_anytime_anywhere">Find the Perfect \nStay, Anytime, Anywhere!</string>
    <string name="search_your_house_or_location">Search Your House or Location</string>
    <string name="apartment">Apartment</string>
    <string name="_895_00">$895.00</string>
    <string name="royal_apartment_in_losangles_usa">Royal Apartment in LosAngles, USA</string>
    <string name="_4_5_">4.5</string>
    <string name="facilities_">Facilities</string>
    <string name="ask_for_virtual_tour">Ask for virtual tour</string>
    <string name="_6_beds">6 Beds</string>
    <string name="_4_bathrooms">4 Bathrooms</string>
    <string name="car_garage">Car Garage</string>
    <string name="_500_m2">500 m2</string>
    <string name="description">Description</string>
    <string name="this_6_bed_4_bath_home_boasts_an_enormous_open_living_plan_accented_by_strking_architectural_features_and_high_end_finishes_feel_inspired_by_open_sight_lines_that_embrace_the_outdoors_crowned_by_stuninng_coffered_ceolings">This 6 bed / 4 bath home boasts an enormous. open-living plan, accented by strking architectural features and high end finishes.Feel inspired by open sight lines that embrace the outdoors, crowned by stuninng coffered ceolings.</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="edit_n_profile">Edit\n Profile</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="name">Name</string>
    <string name="lakshan_ekanayaka">Lakshan Ekanayaka</string>
    <string name="email">Email</string>
    <string name="lakshanekanayaka25_gmail_com">lakshanekanayaka25@gmail.com</string>
    <string name="number">Number</string>
    <string name="_94_762324567">+94 762324567</string>
    <string name="password">Password</string>
    <string name="lakshan123">lakshan123</string>
    <string name="done">Done</string>
    <string name="house_">House</string>
    <string name="apartment_">Apartment</string>
    <string name="villa">Villa</string>
    <string name="bungola">Bungola</string>
    <string name="empty_land">Empty Land</string>
    <string name="office">Office</string>
    <string name="_house_">House</string>
    <string name="_459_00">$459.00</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_apartment_">Apartment</string>
    <string name="_1095_00">$1095.00</string>
    <string name="_3_">3</string>
    <string name="_6">6</string>
    <string name="_house_1">House</string>
    <string name="_760_00">$760.00</string>
    <string name="_3_n">3</string>
    <string name="_4_">4</string>
    <string name="apartment_1">Apartment</string>
    <string name="_1200_00">$1200.00</string>
    <string name="_4_n">4</string>
    <string name="_6_">6</string>
    <string name="royal_house_in_losangles_usa">Royal House in LosAngles, USA</string>
    <string name="ask_for_virtual_tour_h">Ask for virtual tour</string>
    <string name="_2_bathrooms">2 Bathrooms</string>
    <string name="car_garage_h">Car Garage</string>
    <string name="_100_m2">100 m2</string>
    <string name="description_h">Description</string>
    <string name="this_2_bed_bath_home_boasts_an_enormous_open_living_plan_accented_by_strking_architectural_features_and_high_end_finishes_feel_inspired_by_open_sight_lines_that_embrace_the_outdoors_crowned_by_stuninng_coffered_ceolings">This 2 bed / bath home boasts an enormous. open-living plan, accented by strking architectural features and high end finishes.Feel inspired by open sight lines that embrace the outdoors, crowned by stuninng coffered ceolings.</string>
    <string name="request_appointment_h">Request Appointment</string>
    <string name="stay_easy">Stay Easy</string>
    <string name="find_your_perfect_stay_with_ease">Find Your Perfect Stay with Ease!</string>
    <string name="hi_nplease_login">Hi, \nPlease Login</string>
    <string name="email_ep">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password_ep">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_my_password">Forgot my Password</string>
    <string name="or_login_with">Or Login With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="not_yet_registered_sign_up">Not Yet Registered? Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_n_to_house_booking">Welcome\n to House Booking</string>
    <string name="find_your_dream_home_one_key_at_a_time_nyour_trusted_paryner_in_every_move">Find your Dream Home. One key at a time\nYour trusted paryner in every move</string>
    <string name="next">Next</string>
    <string name="discover_a_wide_range_of_nhomes_for_rent_and_stay">Discover a wide range of\nhomes for rent and stay!</string>
    <string name="find_the_perfect_home_for_your_needs_with_stayease">Find the perfect home for your needs with StayEase</string>
    <string name="next_">Next</string>
    <string name="easily_search_and_filter_to_find_your_dream_home">Easily search and filter to find your dream home!</string>
    <string name="use_smart_filters_to_refine_your_search_by_price_location_and_amenities">Use smart filters to refine your search by price, location, and amenities.</string>
    <string name="_next_">Next</string>
    <string name="profile">Profile</string>
    <string name="lakshan_ekanayaka_">Lakshan Ekanayaka</string>
    <string name="lakshanekanayaka25_gmail_com_">lakshanekanayaka25@gmail.com</string>
    <string name="_94_762324567_">+94 762324567</string>
    <string name="edit_profile_">Edit Profile</string>
    <string name="favorite_list">Favorite List</string>
    <string name="house_p">House</string>
    <string name="_395_00_">$395.00</string>
    <string name="_2_p">2</string>
    <string name="_4_p">4</string>
    <string name="logout">Logout</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="name_ca">Name</string>
    <string name="enter_your_name_ca">Enter Your Name</string>
    <string name="email_ca">Email</string>
    <string name="enter_your_email_ca">Enter Your Email</string>
    <string name="number_ca">Number</string>
    <string name="enter_your_number_ca">Enter Your Number</string>
    <string name="password_ca">Password</string>
    <string name="enter_your_password_ca">Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="get_started">GET STARTED</string>
    <string name="villa_">Villa</string>
    <string name="_4_5_v">4.5</string>
    <string name="_295_00">$295.00</string>
    <string name="royal_villa_in_losangles_usa">Royal villa in LosAngles, USA</string>
    <string name="facilities_v">Facilities</string>
    <string name="ask_for_virtual_tour_bv">Ask for virtual tour</string>
    <string name="_2_beds">2 Beds</string>
    <string name="_1_bathrooms">1 Bathrooms</string>
    <string name="no_garage">No Garage</string>
    <string name="_75_m2">75 m2</string>
    <string name="description_v">Description</string>
    <string name="this_2_bed_bath_home_boasts_an_enormous_open_living_plan_accented_by_strking_architectural_features_and_high_end_finishes_feel_inspired_by_open_sight_lines_that_embrace_the_outdoors_crowned_by_stuninng_coffered_ceolings_v">This 2 bed / bath home boasts an enormous. open-living plan, accented by strking architectural features and high end finishes.Feel inspired by open sight lines that embrace the outdoors, crowned by stuninng coffered ceolings.</string>
    <string name="request_appointment_v">Request Appointment</string>
</resources>