<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_2"
    tools:context=".SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/intro_pic" />

            <TextView
                android:id="@+id/text_main1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:text="@string/explore_houses_that_nfit_your_lisfestyle" />

            <TextView
                android:id="@+id/text_main2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_your_dream_home_one_key_at_a_time_nyour_trusted_partner_in_every_move"
                android:textColor="@color/white"
                android:layout_marginVertical="16dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_get_start"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/get_started"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>